# src/modules/users/dto/update-user.dto.ts
@@ -1,6 +1,6 @@
-import { PartialType, OmitType } from '@nestjs/swagger';
-import { CreateUserDto } from './create-user.dto';
+// import { PartialType, OmitType } from '@nestjs/swagger';
+// import { CreateUserDto } from './create-user.dto';
 
-export class UpdateUserDto extends PartialType(
-  OmitType(CreateUserDto, ['password'] as const),
-) {} 
+// export class UpdateUserDto extends PartialType(
+//   OmitType(CreateUserDto, ['password'] as const),
+// ) {} 
